# path-tracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  scene-config-instructions.md
Path Tracer/Path Tracer/: Image.cpp  Image.hpp  Material.cpp  Material.hpp  OBJLoader.cpp  OBJLoader.hpp  Object.cpp  Object.hpp  PathTracer.cpp  PathTracer.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  StringUtil.cpp  StringUtil.hpp  main.cpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp
Path Tracer/Path Tracer.xcodeproj/: project.pbxproj
Path Tracer/Path Tracer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Path Tracer/Path Tracer.xcodeproj/project.xcworkspace/xcuserdata/i-yam-jeremy.xcuserdatad/: UserInterfaceState.xcuserstate
Path Tracer/Path Tracer.xcodeproj/xcuserdata/i-yam-jeremy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Path Tracer/Path Tracer.xcodeproj/xcuserdata/i-yam-jeremy.xcuserdatad/xcschemes/: xcschememanagement.plist
build-scripts/: cl-to-cpp-constant-converter.py
scenes/: scene1.config  scene2.config
src/: CMakeLists.txt  Image.cpp  Image.hpp  Material.cpp  Material.hpp  OBJLoader.cpp  OBJLoader.hpp  Object.cpp  Object.hpp  PathTracer.cpp  PathTracer.hpp  Scene.cpp  Scene.hpp  StringUtil.cpp  StringUtil.hpp  main.cpp  render-cl-kernel.hpp  render.cl
test/: OBJLoader-test.cpp  StringUtil-test.cpp
